# WebAssemblyNoise

./: .gitignore  CMakeLists.txt  README.md  build.bat  env_example.bat  start.bat
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: Editor.vue  MainCanvas.vue
frontend/src/router/: index.js
frontend/src/views/: Shader.vue
shaders/: default.fs  default.vs  empty.fs  gabor.fs  gabor2.fs  screen.fs
src/: index.html  main.cpp  wasmloader.js
src/core/: Application.cpp  Application.h  CanvasRenderer.cpp  CanvasRenderer.h
src/core/common/: Application.cpp  Application.h  CanvasRenderer.cpp  CanvasRenderer.h  WebBindings.cpp  WebBindings.h  WebData.cpp  WebData.h
src/core/shader/: Shader.cpp  Shader.h
src/util/: Chrono.cpp  Chrono.h  Directory.cpp  Directory.h  Generator.cpp  Generator.h  Logger.cpp  Logger.h  log.cpp  log.h
